# MixtureOfRecursions

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  MANIFEST.in  README.md  advanced_mor_demo.py  docker-compose.yml  pyproject.toml  requirements.txt  run_mor_experiment.py  setup.py  simple_mor_demo.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  research_question.md
.github/workflows/: ci.yml
notebooks/: 01_getting_started.ipynb  02_mixture_of_recursions_demo.ipynb
src/: __init__.py
src/analysis/: __init__.py  mor_analyzer.py
src/experiments/: evaluate_mor.py  train_mor.py
src/models/: __init__.py  advanced_mor.py  mor_model.py
src/utils/: config.py
tests/: test_config.py  test_mor_model.py
